[package]
name = "tiltak-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
clap = "2.33"
fern = "0.6"
chrono = "0.4"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }