[package]
name = "tiltak-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
clap = "2.33"
fern = "0.6"
chrono = "0.4"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
board-game-traits = "0.4"
pgn-traits = "0.5.0"
tiltak = { git = "https://github.com/MortenLohne/tiltak", features = ["serde"] }
serde = "1"
serde_json = "1"
rusoto_core = "0.48"
rusoto_lambda = "0.48"
bytes = "1"
futures = "0.3"
once_cell = "1.8"
reqwest = "0.12.4"
urlshortener = "3.2.1"
lz-str = "0.2.1"
urlencoding = "2.1.3"
